# gcc_cross

./: apt-setup_arm.sh  bin_exists.sh  install_binutils.sh  install_gcc.sh
arm-baremetal-toolchain_scripts/: .gdb_history  arm-baremetal-toolchain_path.sh  install_arm-baremetal-toolchain.sh
arm-baremetal-toolchain_scripts/STM32/: .gitignore  .linter-clang-flags  .linter-clang-includes  HOW_TO_BUILD  README
arm-baremetal-toolchain_scripts/STM32/cmake/: stm32cube.cmake
arm-baremetal-toolchain_scripts/STM32/examples/blinking_led/: main.c
arm-baremetal-toolchain_scripts/STM32/examples/demo/: CMakeLists.txt
arm-baremetal-toolchain_scripts/STM32/examples/push_button/: CMakeLists.txt  main.c
avr-toolchain_scripts/: avr-toolchain_path.sh  install_avr-binutils.sh  install_avr-gcc.sh  install_avr-libc.sh  install_avr-toolchain.sh  test.c
